--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "env-cmd": "^10.1.0",
+    "env-cmd": "10.1.0",
   }
 }
