--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "express": "^4.18.2",
+    "fastify": "^4.25.1",
+    "@fastify/formbody": "^7.4.0",
     "dotenv": "^16.3.1"
   }
 }
